# conf-ops

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml.example
.github/workflows/: deploy.yml
client/: components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
client/src/: App.vue  i18n.ts  main.ts  router.ts
client/src/api/: base.ts  index.ts
client/src/api/modules/: project.ts  (+1 more)
client/src/components/: HomeLayout.vue
client/src/functions/: useAPI.ts  useBreakpoint.ts  usePage.ts  useProject.ts  useTicket.ts
client/src/locales/: en.json  zh.json
client/src/utils/: features.ts  image.ts
client/src/views/: HomeView.vue  LoginView.vue  NotFoundView.vue  SystemView.vue  TokenView.vue
migrations/2024-02-09-164307_create_project_base_tables/: down.sql  up.sql
migrations/2024-02-16-075046_create_role_module_table/: down.sql  up.sql
migrations/2024-02-18-033547_create_ticket_module_tables/: down.sql  up.sql
migrations/2024-03-30-105110_add_unique_constraint_in_ticket/: down.sql  up.sql
migrations/2024-03-31-051217_add_text_i18n/: up.sql
scripts/: clean.sh  dev.sh  prepare.sh
src/: error.rs  main.rs  schema.rs
src/locales/: en.json  zh.json
src/models/: label.rs  mod.rs  project.rs  role.rs  target.rs  user.rs  user_email.rs  user_label.rs  user_session.rs
src/modules/: auth.rs  base.rs  common.rs  guard.rs  mod.rs  role.rs
src/modules/ticket/: api.rs  mod.rs  models.rs
src/utils/: db.rs  file.rs  i18n.rs  image.rs  jwt.rs  lettre.rs  mod.rs  rocket.rs  serde.rs  string.rs  vec.rs
(+23 files in other folders)
