[package]
name = "conf-ops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework
rocket = { version = "0.5.0", features = ["secrets", "json", "uuid"] }
rocket_db_pools = { version = "0.1.0", features = ["diesel_mysql"] }

tokio = { version = "1", features = ["full"] }

# json
serde = { version = "1.0", features = ["derive"] }

# mysql
diesel = { version = "2.1.0", features = ["mysql", "chrono", "serde_json"] }

# uuid
uuid = { version = "1.7", features = ["v4"] }

# datetime
chrono = { version = "0.4", features = ["serde"] }

# email
lettre = { version = "0.11", features = ["smtp-transport", "native-tls", "tokio1", "tokio1-native-tls", "builder"] }

# jwt
jsonwebtoken = "9"

# hash
sha256 = { version = "1.5", features = ["async"] }

# image
image = "0.24"
